src/pages/ar-ae/v1.11.0/deployment/openreplay-admin.mdx
عنوان: "إدارة OpenReplay"
metaTitle: "إدارة OpenReplay"
metaDescription: "كيفية إدارة وإدارة بسهولة نسختك من OpenReplay."
layout: ~/layouts/MainLayout.astro
i18nReady: صحيح
---

## CLI

CLI مفيد لإدارة جوانب أساسية من نسختك من OpenReplay، مثل إعادة تشغيل أو إعادة تثبيت خدمة، الوصول إلى سجلات عنصر ما أو مجرد التحقق من حالة خدمات الخلفية.

قم بتشغيل CLI باستخدام الخيار `-h`:


```bash
openreplay-cli -h
```


وانظر إلى قائمة جميع الخيارات المتاحة:


```shellsession
  ___                   ____            _
 / _ \ _ __   ___ _ __ |  _ \ ___ _ __ | | __ _ _   _
| | | | '_ \ / _ \ '_ \| |_) / _ \ '_ \| |/ _` | | | |
| |_| | |_) |  __/ | | |  _ <  __/ |_) | | (_| | |_| |
 \___/| .__/ \___|_| |_|_| \_\___| .__/|_|\__,_|\__, |
      |_|                        |_|            |___/

[INFO]
  Usage: openreplay [ -h | --help ]
                    [ -s | --status ]
                    [ -i | --install DOMAIN_NAME ]
                    [ -u | --upgrade ]
                    [ -U | --deprecated-upgrade /path/to/old_vars.yaml]
                    [ -r | --restart ]
                    [ -R | --Reload ]
                    [ -c | --cleanup N (in days) ]
                    [ -e | --edit ]
                    [ -p | --install-packages ]
                    [ -l | --logs SERVICE ]
         Services: alerts assets assist chalice
                   db ender frontend heuristics
                   http integrations nginx-controller
                   peers sink sourcemapreader storage
```


يعتمد OpenReplay على العناصر / الخدمات التالية:

| الخدمة | الوصف |
|---------|-------------|
| http | يحصل على الأحداث وحفلات الجلسات |
| الحوض | يقرأ البيانات من خط الانتاج التدفقي (Redis أو Kafka للإصدار الحربي) ويدرج في التخزين المؤقت (NFS) |
| التخزين | ينقل ملفات تسجيل الجلسة المؤقتة إلى خدمة التخزين الكائن |
| الأصول | لتخزين الأصول (CSS، الخطوط والأيقونات) لعرض صحيح للتسجيلات |
| قاعدة البيانات | يقرأ ويكتب في مختلف قواعد البيانات (Postgres + ClickHouse للإصدار الحربي) |
| ender | ينهي جلسات المستخدمين إذا كانت غير نشطة أو غير متصلة |
| chalice | واجهة برمجة التطبيقات لتقديم الواجهة الأمامية |
| التنبيهات | يرسل إشعارات (بريد إلكتروني، سلاك، داخل التطبيق، وبروكست) عندما يتم الوصول إلى حد محدد من المعلمات الأداء من قبل أي من المستخدمين |
| التكاملات | يدفع ويسحب البيانات من واجهات برمجة التطبيقات الخارجية المدعومة (Sentry، Elastic، GitHub، Jira، إلخ.) |

## أوامر مفيدة

- تحقق من حالة الصحة لـ OpenReplay


```sh
openreplay -s
```


- تحقق من سجلات الخدمات


```sh
openreplay -l <service name>
```


## زيادة سعة الخدمة

يمكن زيادة سعة أي خدمة عن طريق تجاوز القيم الافتراضية لتخصيص المعالجة المركزية / الذاكرة. هذه الأخيرة يتم تحديدها أثناء عملية الإعداد بناءً على سعة النسخة الخاصة بك ويناسب إحتياجات معظم التثبيتات.

إذا كان لديك حجم كبير وآلة كبيرة، فقم بتحرير ملف `/var/lib/openreplay/vars.yaml` وقم بتجاوز موارد الخدمة. في المثال التالي، نفعل ذلك لعامل `http`. ولكن يمكن القيام بذلك لأي خدمة (أي حوض، التخزين، postgresql، redis، إلخ.) عن طريق إلغاء التعليق وتحديث الكتلة أدناه. إذا كنت بحاجة إلى القيام بذلك لأكثر من خدمة واحدة، فقم بنسخ وإعادة تسمية / تحديث نفس الكتلة (التكرارات العقلانية).


```yaml
http:
  resources:
    limits:
      cpu: 4096m
      memory: 8192Mi
    requests:
      cpu: 1024m
      memory: 2056Mi
```


وأخيرا، قم بإعادة تثبيت الخدمة لتأخذ القيود الجديدة فعالية (لن يتم فقدان البيانات الخاصة بك):


```bash
 openreplay-cli -R
```


## إلغاء تثبيت OpenReplay

قم بتشغيل الأوامر التالية لإلغاء تثبيت OpenReplay:


```bash
sudo k3s-uninstall.sh
```


جميع التكوين المخزن في `/var/lib/openreplay/`.


```
sudo rm -rf /var/lib/openreplay/openreplay
```

